// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-kLLXSd dUkFhP"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    >
      <tr>
        <td
          className="sc-gXmSlM sc-cCsOjp dJFjIR gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp hlwLoW gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Bigger Spacings 1`] = `
<div
  className="sc-kLLXSd dUkFhP"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      <div
        className="sc-iTONeN jKbVOz"
      >
        Assets to deposit
      </div>
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    >
      <tr>
        <td
          className="sc-gXmSlM sc-cCsOjp dJFjIR gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp hlwLoW gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-kLLXSd lnFKro"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    />
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM iGOyJk"
          colSpan={5}
        >
          <p
            className="sc-fEOsli dDFHem c-text--body-5"
          >
            There is no data loaded.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-kLLXSd dUkFhP"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    >
      <tr>
        <td
          className="sc-gXmSlM sc-cCsOjp dJFjIR gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp hlwLoW gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp kHGbIY gNHjqF"
          width={100}
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ cTLctq jriGrI"
            data-element="button"
            onClick={[Function]}
            radius="default"
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Small Spacing 1`] = `
<div
  className="sc-kLLXSd dUkFhP"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      <div
        className="sc-iAvgwm eiTdTz"
      >
        <div>
          Your deposit
        </div>
      </div>
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    >
      <tr>
        <td
          className="sc-gXmSlM sc-cCsOjp dJFjIR hSgQmU"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ hSgQmU"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ hSgQmU"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ hSgQmU"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp hlwLoW hSgQmU"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM dJFjIR"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM hlwLoW"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM dJFjIR"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM hlwLoW"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM dJFjIR"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM hlwLoW"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM dJFjIR"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM ksYnaJ"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM hlwLoW"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-kLLXSd dUkFhP"
  data-element="tableWrapper"
>
  <table
    className="sc-ikZpkk eFtnVx"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-bZnhIo blrvud"
    >
      <tr>
        <td
          className="sc-gXmSlM sc-cCsOjp dJFjIR gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp ksYnaJ gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-gXmSlM sc-cCsOjp hlwLoW gNHjqF"
        >
          <div
            className="sc-jIZahH sc-himrzO kDlMBg gQKlXj"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr>
        <td
          className="sc-gXmSlM SQWQ"
        >
          <div
            className="sc-gFGZVQ UwycM"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-gXmSlM bdTOUc"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-gXmSlM dHQUaX"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-efBctP iNXHcf c-table__footer"
    >
      <tr>
        <td
          className="sc-gXmSlM ksYnaJ"
          colSpan={5}
        >
          <div>
            Footer component
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
